Add partially done color game

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <h1>Chandan's Portfolio</h1>
   <p>Here are some of my recent work</p>
   <ul>
-    <li>Color game project</li>
-    <li>Scorekeeper</li>
+    <li><a href="colorgame.html">Color game project</a></li>
+    <li><a href="scorekeeper.html">Scorekeeper</a></li>
     <li>...</li>
   </ul>
 </body>
